Colocando estilos en footer

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,3 +7,8 @@
     font-family: 'Poppins', sans-serif;    
 }
 
+.footer{
+    text-align: center;
+    background: blue;
+    font-family: 'Times New Roman', Times, serif;
+}
